--- a/css/small.css
+++ b/css/small.css
@@ -2,25 +2,43 @@ body {
     font-size: 18px;
     line-height: 1.5;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    height:100x;
+}
+
+h1 {
+    font-size:1.5rem;
+    margin:0.15rem;
+}
+
+h2 {
+    font-size:1rem;
+    border-bottom:1px solid;
+    margin-bottom:0.5rem;
 }
 
 header, nav, main, footer { 
-    margin: 1.25rem auto;
-    max-width: 760px;
+    margin: 0 auto;
+    max-width: 45rem;
 }
 
 header {
+    margin-top:10px;
+}
+
+header nav {
+    background-color:#BFD9D9;
+    color:#1B365C;
+}
+
+header, footer {
     background-color:#BFD9D9;
     color:#1B365C;
     text-align:center;
-    padding: 1px;
 }
 
 header img {
-    float:right;
     width:200px;
     height:auto;
-    margin:10px;   
 }
 
 footer {
