--- a/lesson2/small.css
+++ b/lesson2/small.css
@@ -4,9 +4,11 @@
 
 
 main{
-    display:grid;
+    display: grid;
     grid-template-columns:1fr;
     text-align:center;
     height:auto;
     width:fit-content;
+    object-fit:scale-down;
+    font-size:0.8rem;
 }
