--- a/lesson2/small.css
+++ b/lesson2/small.css
@@ -1,16 +1,21 @@
 
 
 
-
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size:13px;
+}
 
 main{
-    display: grid;
+    display:grid;
     grid-template-columns:1fr;
     text-align:center;
     height:auto;
     width:fit-content;
+    margin:0 auto;
     object-fit:scale-down;
-    font-size:0.8rem;
+    font-size: size 1.2rem;
+    color:black;
 }
 
 main section img{
