--- a/lesson2/small.css
+++ b/lesson2/small.css
@@ -15,6 +15,13 @@ h1, h2, h3 {
     font-family: 'Lora', serif;
 }
 
+h1 {
+    font-size:3rem;
+}
+
+h2 {
+    font-size:1.3rem;
+}
 
 main{
     display:grid;
@@ -25,16 +32,26 @@ main{
     margin:0 auto;
     object-fit:scale-down;
     font-size: size 1.4rem;
-    line-height:.9rem;
+    line-height:.98rem;
     color:black;
 }
 
 main section img{
     width:100%;
     height:auto;
-    margin:.6rem;
-    padding: 0 .9rem;
     box-shadow: 0 0 6px gray;
 }
 
-font-family: 'Lora', serif;
+main section {
+    margin:0.9rem;
+    padding:0 1rem;
+}
+
+a {
+    text-decoration:none;
+    color:gray;
+}
+
+p {
+    color:gray;
+}
