--- a/lesson2/small.css
+++ b/lesson2/small.css
@@ -49,9 +49,9 @@ main section {
 
 a {
     text-decoration:none;
-    color:gray;
+    color:black;
 }
 
 p {
-    color:gray;
+    color:black;
 }
