--- a/lesson3/small.css
+++ b/lesson3/small.css
@@ -13,6 +13,7 @@ header, footer {
 
 h1, h2, h3 {
     font-family: 'Lora', serif;
+    text-align:left;
 }
 
 h1 {
@@ -24,16 +25,12 @@ h2 {
 }
 
 main{
-    display:grid;
-    grid-template-columns:1fr;
-    text-align:center;
-    height:auto;
-    width:fit-content;
     margin:0 auto;
     object-fit:scale-down;
     font-size: size 1.4rem;
     line-height:.98rem;
     color:#F2E205;
+    background-color:white;
 }
 
 main section img{
