--- a/lesson3/small.css
+++ b/lesson3/small.css
@@ -23,7 +23,7 @@ h1 {
 h2 {
     font-size:1.3rem;
     font-weight:bold;
-    color:#F2E205;
+    color:#F2CF05;
     text-align:left;
 }
 
@@ -73,20 +73,22 @@ main{
     height:auto;
     width:fit-content;
     margin:0 auto;
+    padding:.9rem;
     object-fit:scale-down;
     font-size: size 1.4rem;
     line-height:.98rem;
-    color:white;   
+    color:white;  
+
 }
 
 main section img{
-    width:100%;
+    width:25%;
     height:auto;
     box-shadow: 0 0 6px gray;
+    float:left;
 }
 
 main section {
-    
     background-color:white;
 }
 
