--- a/lesson3/small.css
+++ b/lesson3/small.css
@@ -111,3 +111,23 @@ p {
     height:auto;
     box-shadow: 0 0 6px gray;
 }
+
+
+.title-font {
+text-align:left;
+font-family:'Lora', serif;
+font-weight:bold;
+}
+
+
+.header-font{
+text-align:left;
+font-family:'Lora', serif;
+font-weight:bold;
+}
+
+
+.paragraph-font {
+text-align:left;
+font-family:'Poppins', sans-serif;
+}
