--- a/lesson3/small.css
+++ b/lesson3/small.css
@@ -23,7 +23,7 @@ h1 {
 h2 {
     font-size:1.4rem;
     font-weight:bold;
-    color:#F2CF05;
+    color:#F5863B;
     text-align:left;
 }
 
@@ -56,7 +56,7 @@ nav ul li a{
     text-align:center;
     padding:.70rem;
     text-decoration:none;
-    color:white;
+    color:#262473;
     font-size:1.3rem;
 }
 
