--- a/lesson3/small.css
+++ b/lesson3/small.css
@@ -21,10 +21,11 @@ h1 {
 }
 
 h2 {
-    font-size:1.4rem;
+    font-size:1.5rem;
     font-weight:bold;
     color:#F5863B;
     text-align:left;
+    font-weight:bold;
 }
 
 h3 {
