--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -1,8 +1,13 @@
 @media only screen and (min-width:37.5em){
 
-    main{
-        grid-template-columns:1fr 1fr;
+    body {
+        margin:0 auto;
     }
 
+    nav ul {
+    display:flex;
+}
 
+nav ul li {
+    flex: 1 1 100%;
 }
