--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -100,3 +100,9 @@ p {
     font-size:1.1rem;
     line-height:1.3rem;
 }
+
+.maincontent {
+ padding:1em;
+ margin:1em;
+ background-color:#6AAED9;
+}
