--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -101,8 +101,14 @@ p {
     line-height:1.3rem;
 }
 
-.maincontent {
- padding:1em;
- margin:1em;
- background-color:#6AAED9;
+.contentbox {
+    display:block;
+    margin: 10px auto;
+    border: 1px solid;
+    padding:15px;
+    background-color:#6AAED9 ;
+    line-height:1.2em;
+    box-sizing:border-box;
+    font-weight:bold;
+    font-size:1.3em;
 }
