--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -44,7 +44,7 @@ h1 {
 }
 
 h2 {
-    font-size:1.5rem;
+    font-size:1.6rem;
     font-weight:bold;
     color:#F5863B;
     text-align:left;
@@ -119,6 +119,7 @@ p {
     border: 1px solid;
     padding:15px;
     background-color:#6AAED9 ;
+    color:#262473;
     line-height:1.2em;
     box-sizing:border-box;
     font-weight:bold;
