--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -58,7 +58,7 @@ h3 {
 
 
 nav {
-    max-width: 1200px;
+    max-width: 760px;
     margin:0 auto;
     background-color:#6AAED9;
     text-align:center;
@@ -79,10 +79,6 @@ nav ul li a{
     font-size:1.3rem;
 }
 
-nav a:hover{
-    background-color:white;
-    color:#034C8C
-}
 
 nav button {
     display: none;
@@ -123,4 +119,35 @@ p {
     line-height:1.2em;
     box-sizing:border-box;
     font-size:1.3em;
+}
+
+.navigation {
+	list-style: none;
+	padding: 0;
+}
+.navigation li:first-child {
+	display: block;
+}
+.navigation li {
+	display: none;
+}
+.navigation a {
+	display: block;
+	padding: 0.75rem;
+	text-align: left;
+	text-decoration: none;
+	color: #034C8C;
+	font-weight: 700;
+	transition: 0.5s;
+}
+.navigation a:hover {
+	color: white;
+	background-color: #034C8C;
+}
+
+/* the onclick JS toggles the .reponsive class from display none (.navigation li) to display block because the responsive class is added to the end of the class list like this in HTML.
+  <ul class="navigation responsive">
+*/
+.responsive li {
+	display: block;
 }
