--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -111,13 +111,22 @@ p {
 .contentbox {
     display:block;
     margin: 10px auto;
-    border: 1px solid;
     padding:15px;
-    background-color:#6AAED9 ;
     color:#262473;
     line-height:1.2em;
     box-sizing:border-box;
     font-size:1.3em;
+    background-color:#6AAED9;
+}
+
+.contentboxes {
+    display:block;
+    margin: 10px auto;
+    padding:15px;
+    color:#262473;
+    line-height:1.2em;
+    box-sizing:border-box;
+    font-size:1.3em; 
 }
 
 .navigation {
@@ -174,12 +183,14 @@ p {
     opacity:.9;
     box-shadow: 0 0 25px gray;
     padding:.9rem;
-    
+    top:18px;
+    left:18px; 
 }
 
 .suminfo {
     color:#F5863B;
     margin-right:.5rem;
+    font-size:1.1rem;
 }
 
 
@@ -227,3 +238,23 @@ p {
 	background-color: #034C8C;
 	color: white;
 }
+
+.contentboxes p {
+    font-size:.9rem;
+}
+
+.tomatoes img {
+    float:right;
+    box-shadow:0 0 25px gray;
+}
+
+.contactinfo p {
+    color:white;
+    font-size:.85rem;
+
+}
+
+.map img {
+    float:right;  
+}
+
