--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -28,7 +28,7 @@ header img{
 }
 
 footer {
-max-width:1150px;
+max-width:100%;
 margin: 0 auto;
 text-align: center;
 }
@@ -86,7 +86,7 @@ nav button {
 }
 
 main{
-    width:fit-content;
+    width:100%;
     margin:0 auto;
     padding:.9rem;
     color:white;  
@@ -94,6 +94,12 @@ main{
 
 main section {
     background-color:white;
+}
+
+.prestontown {
+    position:relative;
+    width:100%;
+    height:auto;
 }
 
 a {
