--- a/lesson7/lazyload.css
+++ b/lesson7/lazyload.css
@@ -1,5 +1,7 @@
 body {
     text-align:center;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:2em;
 }
 
 picture {
@@ -9,9 +11,9 @@ picture {
 }
 
 img {
-    filter:blur(.2em);
+    filter:blur(0em);
     transition:filter 0.5s;
     width:300px;
     height:400px;
-    padding:3px;
+    padding:6px;
 }
