--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -27,12 +27,51 @@ header img{
     font-size:.9rem;
 }
 
-footer {
-max-width:100%;
-margin: 0 auto;
-text-align: center;
+nav button {
+    margin: .2rem 2%;
+	padding: .45rem;
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: #262473;
 }
 
+nav {
+	background-color: #6AAED9;
+}
+
+nav ul {
+	list-style-type: none;
+	margin: .5rem;
+	padding: 0;
+}
+
+nav ul li a {
+	display: block;
+	color: #262473;
+	padding: 0.7rem 2%;
+	text-decoration: none;
+    border-top: 1px solid rgba(0,0,0,.3)
+}
+
+nav ul li.activebutton a {
+    background-color: white;
+    color: #F2490C;
+}
+
+nav ul li a:hover {
+	background-color: white;
+}
+
+nav ul.hide {
+    display: none;
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 h1, h2, h3 {
     font-family: 'Lora', serif;
@@ -56,34 +95,12 @@ h3 {
 }
 
 
-nav {
-    flex: 1 1 auto;
-    margin:0 auto;
-    background-color:#6AAED9;
-    text-align:center;
+footer {
+max-width:100%;
+margin: 0 auto;
+text-align: center;
 }
 
-nav ul{
-    list-style-type:none;
-    margin:0;
-    padding:0;
-}
-
-nav ul li a{
-    display:block;
-    text-align:center;
-    padding:.70rem;
-    text-decoration:none;
-    color:#262473;
-    font-size:1.2rem;
-}
-
-
-nav button {
-    display: none;
-    margin: 0.2rem 2%;
-    color:#F5863B;
-}
 
 main{
     width:100%;
@@ -104,7 +121,6 @@ main section {
 
 a {
     text-decoration:none;
-    color:white;
 }
 
 p {
@@ -135,33 +151,6 @@ p {
     font-size:1.3em; 
 }
 
-.nav {
-	list-style: none;
-	padding: 0;
-}
-.nav li:first-child {
-	display: block;
-}
-.nav li {
-	display: none;
-}
-.nav a {
-	display: block;
-	padding: 0.75rem;
-	text-align: left;
-	text-decoration: none;
-	color: #034C8C;
-	font-weight: 590;
-	transition: 0.5s;
-}
-.nav a:hover {
-	color: white;
-	background-color: #034C8C;
-}
-
-/* the onclick JS toggles the .reponsive class from display none (.navigation li) to display block because the responsive class is added to the end of the class list like this in HTML.
-  <ul class="navigation responsive">
-*/
 .responsive li {
 	display: block;
 }
@@ -278,7 +267,7 @@ p {
     color:white;
     text-align:center;
     font-size:1.2rem;
-    font-style:italic;
+    font-style:italic;  
 }
 
 .gridlayout #currentval {
