--- a/lesson6/css/small.css
+++ b/lesson6/css/small.css
@@ -3,6 +3,18 @@ body {
     font-size:1.0rem;
 }
 
+.pancakefriday {
+    background-color:#F5863B;
+    padding:1em;
+}
+
+.pancakefriday p {
+    color:white;
+    text-align:center;
+    font-size:1.2rem;
+    font-style:italic;
+
+
 header, footer {
     background-color:#262473;
     color:white;
@@ -26,12 +38,52 @@ header img{
     display: block;
     font-size:.9rem;
 }
-
-footer {
-max-width:100%;
-margin: 0 auto;
-text-align: center;
+nav button {
+    margin: .2rem 2%;
+	padding: .45rem;
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: #262473;
 }
+
+nav {
+	background-color: #6AAED9;
+}
+
+nav ul {
+	list-style-type: none;
+	margin: .5rem;
+	padding: 0;
+}
+
+nav ul li a {
+	display: block;
+	color: #262473;
+	padding: 0.7rem 2%;
+	text-decoration: none;
+    border-top: 1px solid rgba(0,0,0,.3)
+}
+
+nav ul li.activebutton a {
+    background-color: white;
+    color: #F2490C;
+}
+
+nav ul li a:hover {
+	background-color: white;
+}
+
+nav ul.hide {
+    display: none;
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+
+
 
 
 h1, h2, h3 {
@@ -56,34 +108,7 @@ h3 {
 }
 
 
-nav {
-    flex: 1 1 auto;
-    margin:0 auto;
-    background-color:#6AAED9;
-    text-align:center;
-}
 
-nav ul{
-    list-style-type:none;
-    margin:0;
-    padding:0;
-}
-
-nav ul li a{
-    display:block;
-    text-align:center;
-    padding:.70rem;
-    text-decoration:none;
-    color:#262473;
-    font-size:1.2rem;
-}
-
-
-nav button {
-    display: none;
-    margin: 0.2rem 2%;
-    color:#F5863B;
-}
 
 main{
     width:100%;
@@ -135,29 +160,6 @@ p {
     font-size:1.3em; 
 }
 
-.nav {
-	list-style: none;
-	padding: 0;
-}
-.nav li:first-child {
-	display: block;
-}
-.nav li {
-	display: none;
-}
-.nav a {
-	display: block;
-	padding: 0.75rem;
-	text-align: left;
-	text-decoration: none;
-	color: #034C8C;
-	font-weight: 590;
-	transition: 0.5s;
-}
-.nav a:hover {
-	color: white;
-	background-color: #034C8C;
-}
 
 /* the onclick JS toggles the .reponsive class from display none (.navigation li) to display block because the responsive class is added to the end of the class list like this in HTML.
   <ul class="navigation responsive">
@@ -276,18 +278,17 @@ p {
     border:5px solid white; 
 }
 
-.pancakefriday {
-    background-color:#F5863B;
-    padding:1em;
-}
 
-.pancakefriday p {
-    color:white;
-    text-align:center;
-    font-size:1.2rem;
-    font-style:italic;
 }
 
 .gridlayout #currentval {
     color:#F5863B;
 }
+
+
+footer {
+    max-width:100%;
+    margin: 0 auto;
+    text-align: center;
+    }
+    
