--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -132,8 +132,8 @@ a {
 p {
     color:#262473;
     text-align:left;
-    font-size:1.1rem;
-    line-height:1.3rem;
+    font-size:.8rem;
+    line-height:1.1rem;
 }
  
 .gallery ul {
