--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -190,6 +190,14 @@ p {
     font-size:1.1rem;
 }
 
+.currentval {
+    color:#F2490C;
+}
+
+.temp {
+    color:#F2490C;
+}
+
 
 .forecast {
 	display: flex;
