css medium formatting

--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -8,12 +8,13 @@ nav button {
     display:none;
 }
 
-    nav ul.hide{
+nav ul.hide {
     display:flex;
 	margin:0 auto;
-	flex: 1 1 100%;
+	flex:1 1 100%;
 	justify-content:space-evenly;
 }
 
 nav ul li a {
-    border:none;}
+border:none;
+}
