--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    font-size:1.0rem;
+    font-size:1.2rem;
 }
 
 header, footer {
@@ -50,6 +50,7 @@ nav ul {
 nav ul li a {
     display: block;
     color: #262473;
+    font-size:1.2rem;
     padding: 0.7rem 2%;
     text-decoration: none;
     border-top: 1px solid rgba(0,0,0,.3)
@@ -96,22 +97,18 @@ h2 {
     font-weight:bold;
 }
 
-h3,h4 {
+h3, h4 {
     color:#262473;
     text-align:left;
+    font-size:2.0rem;
 }
 
 }
-main{
+main {
     margin:0 auto;
-    padding:.9rem;
+    padding:1.0rem;
     color:white;  
 }
-
-main section {
-    background-color:white;
-}
-
 
 a {
     text-decoration:none;
@@ -125,13 +122,15 @@ p {
     line-height:1.1rem;
 }
  
-
 footer {
 max-width:100%;
 margin: 0 auto;
 text-align: center;
+line-height:1.2rem;
 }
 
 .thankyou {
     padding:5rem;
 }
+
+
