--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -103,7 +103,12 @@ h3, h4 {
     font-size:2.0rem;
 }
 
+h5 {
+    color:#262473;
+    font-size:1.2rem;
+    margin:0;
 }
+
 main {
     margin:0 auto;
     padding:1.0rem;
