--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -146,3 +146,37 @@ line-height:1.2rem;
     font-size:1.2rem;
     margin:0;
 }
+
+main.stormCenter {
+    text-align:left;
+    max-width:75%; 
+}
+
+.stormform {
+    background-color:#D2E7FA;
+    padding:.80rem;
+}
+
+label.top {
+    color:#262473;
+    display:block;
+}
+
+.top {
+    padding:.75rem 0;
+}
+
+.stormrange {
+    color:#262473;
+    padding:.75rem 0;
+}
+
+.scale, .sbs {
+    color:#262473;
+    display:block;
+    padding:.75rem 0;
+}
+
+form label.top input:required {
+    border:2px solid #262473;
+}
