--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -2,16 +2,58 @@ body {
     text-align:center;
     margin: 0 auto;
     max-width:1000px;
+    color:white;
 }
 
+h1 {
+    text-align:center;
+    color:#006184;
+    font-family:'Lora', serif;
+    font-size:2.5em;
+}
 
+div.cards {
+    display:grid;
+    grid-template-columns:1fr;
+    grid-gap:0.5rem;
+    background-color:#006184;
+    padding:1rem;
+    border: 1px solid white;
+}
 
+div.cards h2 {
+    text-align:center;
+    font-family:'Lora', serif;
+    font-size:1.5em;
+}
 
+div.cards p {
+    text-align:center;
+    font-family:'Poppins', sans-serif;
+    line-height:1.2em;
+}
 
-@media (min-width:32.5em) {
+img {
+    display:flex;
+
+    max-width:60%;
+    box-shadow: 0px 0px 15px 2px black;
+}
+
+footer {
 
 }
 
-@media (min-width:60em) {
-
+@media only screen and (min-width:32.5em) {
+div.cards {
+    grid-template-columns: 1fr 1fr;
+   }
 }
+
+@media only screen and (min-width:60em) {
+    div.cards {
+        grid-template-columns:1fr 1fr 1fr 1fr;
+    }
+}
+
+#006184
