--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -12,6 +12,10 @@ h1 {
     font-size:2.5em;
 }
 
+div.cards section {
+    border: 2px solid white;
+}
+
 div.cards {
     display:grid;
     grid-template-columns:1fr;
@@ -34,14 +38,17 @@ div.cards p {
 }
 
 img {
-    display:flex;
-
     max-width:60%;
     box-shadow: 0px 0px 15px 2px black;
+    margin:1rem;
 }
 
 footer {
-
+    text-align:center;
+    font-family:'Lora', serif;
+    margin:1rem;
+    color:#007da5;
+    font-weight:bold;
 }
 
 @media only screen and (min-width:32.5em) {
@@ -55,5 +62,3 @@ div.cards {
         grid-template-columns:1fr 1fr 1fr 1fr;
     }
 }
-
-#006184
