--- a/lesson9/css/medium.css
+++ b/lesson9/css/medium.css
@@ -16,6 +16,25 @@ nav ul.hide{
 }
 }
 
+.towns div {
+    align-self:center;
+}
+
+.towns section:nth-child(odd) div {
+    grid-column:2;
+}
+
+.towns section:nth-child(odd) img {
+    grid-column:1;
+    grid-row:1;
+}
+
+div.towns img {
+    width:100%;
+    height:auto;
+    text-align:center;
+    margin:0 auto;
+}
 .prestonMap {
     display:block;
     
