--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -134,6 +134,39 @@ p {
     height:auto;
 }
 
+div.towns section {
+    max-width:100%;
+    text-align:center;
+    margin:15px auto;
+}
+
+div.towns h3 {
+    font-size:1.2rem;
+    font-weight:bold;
+    color:#F2490C;
+    text-align:center;
+    font-weight:bold; 
+    margin:0;
+}
+
+div.towns h4 {
+    font-size:.9rem;
+    font-style:italic;
+    color:#F2490C;
+    text-align:center;
+    margin:0;
+}
+
+div.towns p {
+    margin:5px;
+    text-align:center;
+}
+
+div.towns img {
+    width:70%;
+    height:auto;
+}
+
 .homeArticle h3 {
     font-size:1.4rem;
     font-weight:bold;
