--- a/lesson9/css/medium.css
+++ b/lesson9/css/medium.css
@@ -16,15 +16,17 @@ nav ul.hide{
 }
 }
 
-.towns div {
-    align-self:center;
+div.towns section {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    align-items:center;
 }
 
-.towns section:nth-child(odd) div {
+div.towns section:nth-child(odd) div {
     grid-column:2;
 }
 
-.towns section:nth-child(odd) img {
+div.towns section:nth-child(odd) img {
     grid-column:1;
     grid-row:1;
 }
