--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -134,10 +134,11 @@ p {
     height:auto;
 }
 
-div.towns section {
-    max-width:100%;
-    text-align:center;
-    margin:15px auto;
+div.towns {
+    display:grid;
+    gap:1rem;
+    max-width:1100px;
+    margin:0 auto;
 }
 
 div.towns h3 {
