--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -32,8 +32,8 @@ nav button {
     padding: .45rem;
     background-color: transparent;
     border: none;
+    font-size: 1.5rem;
     color: #262473;
-    font-size:1.1rem;
 }
 
 nav {
@@ -45,14 +45,12 @@ nav ul {
     margin: .5rem;
     padding: 0;
     text-align:center;
-    padding-top:.5rem;
 }
 
 nav ul li a {
     display: block;
     color: #262473;
-    font-size:1.2rem;
-    padding: 0.2rem 2%;
+    padding: 0.7rem 2%;
     text-decoration: none;
     border-top: 1px solid rgba(0,0,0,.3)
 }
@@ -61,9 +59,7 @@ nav ul li.activebutton a {
     background-color: white;
     color: #F2490C;
     font-weight:bold;
-    font-size:1.2rem;
-    padding:.5rem;
-    padding-bottom:.5rem;
+    font-size:1.3rem;
 }
 
 nav ul li a:hover {
@@ -105,7 +101,8 @@ h3 {
 main{
     width:100%;
     margin:0 auto;
-    padding:.9rem;  
+    padding:.9rem;
+    color:white;  
 }
 
 main section {
@@ -114,12 +111,8 @@ main section {
 
 .prestontown {
     position:relative;
-}
-
-.prestontown img {
     width:100%;
     height:auto;
-    margin-right:1rem;
 }
 
 a {
@@ -179,7 +172,7 @@ p {
 
 .summary {
     position:absolute;
-    background:white;
+    background:radial-gradient(white);
     opacity:.9;
     box-shadow: 0 0 25px gray;
     padding:.9rem;
@@ -191,12 +184,16 @@ p {
     color:#F2490C;
     margin-right:.5rem;
     font-size:1.1rem;
-    text-align:left;
 }
 
 .currentval {
     color:#F2490C;
 }
+
+.temp {
+    color:#F2490C;
+}
+
 
 .forecast {
     display: flex;
