--- a/lesson10/css/large.css
+++ b/lesson10/css/large.css
@@ -1,4 +1,4 @@
-@media (min-width:50em){
+@media (min-width:60em){
     body {
         margin:0 auto;
     }
@@ -10,4 +10,8 @@
     nav ul li {
         flex:1 1 100%;
     }
+}
+
+.gallery li:hover {
+    box-shadow: 0 5px 50px #737373;
 }
