--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    font-size:1.0rem;
+    font-size:1.2rem;
 }
 
 header, footer {
@@ -32,8 +32,8 @@ nav button {
     padding: .45rem;
     background-color: transparent;
     border: none;
-    font-size: 1.5rem;
     color: #262473;
+    font-size:1.1rem;
 }
 
 nav {
@@ -50,6 +50,7 @@ nav ul {
 nav ul li a {
     display: block;
     color: #262473;
+    font-size:1.2rem;
     padding: 0.7rem 2%;
     text-decoration: none;
     border-top: 1px solid rgba(0,0,0,.3)
@@ -59,7 +60,7 @@ nav ul li.activebutton a {
     background-color: white;
     color: #F2490C;
     font-weight:bold;
-    font-size:1.3rem;
+    font-size:1.2rem;
 }
 
 nav ul li a:hover {
@@ -74,6 +75,10 @@ nav ul.hide {
     content: "";
     display: table;
     clear: both;
+}
+
+.responsive li {
+    display: block;
 }
 
 h1, h2, h3 {
@@ -92,21 +97,17 @@ h2 {
     font-weight:bold;
 }
 
-h3 {
+h3, h4 {
     color:#262473;
     text-align:left;
+    font-size:2.0rem;
 }
 
 
-main{
-    width:100%;
+main {
     margin:0 auto;
-    padding:.9rem;
+    padding:1.0rem;
     color:white;  
-}
-
-main section {
-    background-color:white;
 }
 
 .prestontown {
@@ -123,10 +124,10 @@ a {
 p {
     color:#262473;
     text-align:left;
-    font-size:1.1rem;
-    line-height:1.3rem;
+    font-size:.8rem;
+    line-height:1.1rem;
 }
-
+ 
 .contentbox {
     display:block;
     margin: 10px auto;
@@ -147,11 +148,6 @@ p {
     box-sizing:border-box;
     font-size:1.3em; 
 }
-
-.responsive li {
-    display: block;
-}
-
 .summary h2 {
     font-size:1.2rem;
     font-weight:bold;
@@ -172,7 +168,7 @@ p {
 
 .summary {
     position:absolute;
-    background:radial-gradient(white);
+    background:white;
     opacity:.9;
     box-shadow: 0 0 25px gray;
     padding:.9rem;
@@ -180,20 +176,15 @@ p {
     left:18px; 
 }
 
-.suminfo {
+.label {
     color:#F2490C;
     margin-right:.5rem;
     font-size:1.1rem;
 }
 
-.currentval {
+.value {
     color:#F2490C;
 }
-
-.temp {
-    color:#F2490C;
-}
-
 
 .forecast {
     display: flex;
@@ -282,4 +273,5 @@ footer {
 max-width:100%;
 margin: 0 auto;
 text-align: center;
+line-height:1.2rem;
 }
