--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -186,7 +186,7 @@ p {
     color:#F2490C;
 }
 
-.forecast {
+.flex {
     display: flex;
     flex-flow: row wrap;
 } /* let us combine row and wrap with flow */
@@ -205,7 +205,7 @@ p {
     background-color: #034C8C;
     color: white;
 }
-.forecast, .column, .grid {
+.flex, .column, .grid {
     border-right: 1px solid #333;
 }
 
