--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -15,3 +15,43 @@
 .gallery li:hover {
     box-shadow: 0 5px 50px #737373;
 }
+
+
+/*-------------Home Page---------------*/
+div.towns {
+    display:grid;
+    grid-template-columns:1fr 1fr 1fr;
+    grid-gap:5px;
+    align-items:center;
+    max-width:1200px;
+}
+
+div.towns h4 {
+    margin:0;
+}
+
+div.towns section {
+    grid-template-columns:1fr;
+    max-width:100%;
+}
+
+div.towns section:nth-child(odd) div {
+    grid-column:1;
+}
+
+div.towns img {
+    display:flex;
+    margin:15px;
+    padding:1rem;
+
+}
+
+.prestonMap {
+    width:30%;
+    height:auto;
+}
+
+/*-------------Gallery Page---------------*/
+.gallery li:hover {
+    box-shadow: 0 5px 50px #737373;
+}
