--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -325,4 +325,74 @@ div.towns img {
     font-weight:bold; 
 }
 
-/*------------- Page---------------*/
+/*------------- Storm Center Page---------------*/
+
+.thankyou {
+    padding:5rem;
+}
+
+.thankyou h2 {
+    font-size:1.6rem;
+    font-weight:bold;
+    color:#F2490C;
+    text-align:left;
+    font-weight:bold;
+}
+
+.thankyou h5 {
+    color:#262473;
+    font-size:1.2rem;
+    margin:0;
+}
+
+main.stormCenter {
+    text-align:left;
+    max-width:75%; 
+}
+
+.stormform {
+    background-color:#D2E7FA;
+    padding:.80rem;
+}
+
+label.top {
+    color:#262473;
+    display:block;
+}
+
+.top {
+    padding:.75rem 0;
+}
+
+.stormrange {
+    color:#262473;
+    padding:.75rem 0;
+}
+
+.scale, .sbs {
+    color:#262473;
+    display:block;
+    padding:.75rem 0;
+}
+
+form label.top input:required {
+    border:2px solid #262473;
+}
+
+/*------------- Gallery Page---------------*/
+.gallery ul {
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap:1rem;
+    padding:0;
+}
+
+.gallerygrid {
+    position:relative;
+    margin:0;
+    overflow:hidden;
+}
+
+.gallerygrid img {
+    width:100%;
+}
