--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -291,6 +291,9 @@ text-align: center;
 line-height:1.2rem;
 }
 
+.herodiv {
+    position: relative;
+  }
 
 /*-------------Home Page---------------*/
 
@@ -428,8 +431,8 @@ form label.top input:required {
     width:60%;
     height:auto;
     margin:15px;
-
 }
+
 
 /*------------- Fish Haven Page---------------*/
 .fishhavenMap {
@@ -438,5 +441,4 @@ form label.top input:required {
     width:60%;
     height:auto;
     margin:10px;
-
 }
