--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -96,6 +96,7 @@ h2 {
     text-align:left;
     font-weight:bold;
     margin:5px;
+    padding-bottom:5px;
 }
 
 h3, h4 {
@@ -180,6 +181,7 @@ p {
 
 .value {
     color:#F2490C;
+    font-size:1.1rem;
 }
 
 .flex {
