--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -268,7 +268,7 @@ p {
 }
 
 .contactinfo {
-    background-color:#6AAED9;
+    background-color:#7AC9FA;
     margin:15px;
     padding:5px 0 0 5px;
 }
