--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,2 +1,14 @@
-font-family: 'Cormorant Garamond', serif;
-font-family: 'Raleway', sans-serif;
+
+body {
+    font-family:'Raleway', sans-serif;
+}
+header h1 {
+    font-family:'Cormorant Garamond', serif;
+    color:#667302;
+}
+header p {
+    color:#93A603;
+}
+a {
+    text-decoration:none;
+}
